@@ -6,4 +6,5 @@ mpih-lshift.c
 mpih-rshift.c
 mpih-sub1.c
 udiv-w-sdiv.c
+mpi-asm-defs.h
 
